--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-REACT_APP_access_token = 7b9e8be5c3d54073a3be8233a4796a37281cf253
-#GENERATE_SOURCEMAP=false
-SASS_PATH=node_modules:src
+GENERATE_SOURCEMAP=false
